# src/main/java/dk/kb/webhooks/api/v1/impl/WebhooksApiServiceImpl.java
@@ -2,50 +2,19 @@ package dk.kb.webhooks.api.v1.impl;
 
 import dk.kb.webhooks.api.v1.*;
 import dk.kb.webhooks.config.ServiceConfig;
-import dk.kb.webhooks.model.v1.BookDto;
-import dk.kb.webhooks.model.v1.ErrorDto;
-import java.io.File;
+import dk.kb.webhooks.model.v1.ChallengeResponseDto;
 import dk.kb.webhooks.model.v1.HelloReplyDto;
-import java.util.List;
-import java.util.Map;
 
 import dk.kb.util.webservice.exception.ServiceException;
-import dk.kb.util.webservice.exception.InternalServiceException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.util.List;
-import java.util.Map;
-import java.util.Arrays;
-import java.util.stream.Collectors;
-import java.io.File;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import dk.kb.util.webservice.ImplBase;
-import javax.validation.constraints.NotNull;
-import javax.ws.rs.*;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.Request;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.core.UriInfo;
-import javax.ws.rs.ext.ContextResolver;
-import javax.ws.rs.ext.Providers;
-import javax.ws.rs.core.MediaType;
-import org.apache.cxf.jaxrs.model.wadl.Description;
-import org.apache.cxf.jaxrs.model.wadl.DocTarget;
-import org.apache.cxf.jaxrs.ext.MessageContext;
-import org.apache.cxf.jaxrs.ext.multipart.*;
 
-import io.swagger.annotations.Api;
+import dk.kb.util.webservice.ImplBase;
+import javax.ws.rs.core.Response;
+import org.apache.cxf.jaxrs.ext.MessageContext;
+
 
 /**
  * webhooks
@@ -80,5 +49,21 @@ public class WebhooksApiServiceImpl extends ImplBase implements WebhooksApi {
         }
     }
 
+    @Override
+    public ChallengeResponseDto challenge(String challenge) {
+        log.debug("Received challenge "+challenge);
+        ChallengeResponseDto response = new ChallengeResponseDto();
+        response.setChallenge(challenge);
+        return response;
+    }
 
+    @Override
+    public void receiveWebhookRequests(String xExlSignature,String notification) {
+        log.debug("Received webhook notification "+notification);
+    }
+
+    @Override
+    public Response redirect(MessageContext request) {
+        return WebhooksApi.super.redirect(request);
+    }
 }
